kube-templates/client/overlays/stage/deployment-patch.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        imagePullPolicy: Always
        image: ui
        # command: ["/bin/sh"]
        # args: ["-c", "ls -la ; pwd"]
        ports:
        - containerPort: 3000
